--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.1.1",
+    "playwright": "^1.30.0",
     "prettier": "^2.8.3",
     "vitest": "^0.28.2"
   }
